# pico-hid-remote

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  _Makefile  battery.c  battery.h  bt.c  bt.h  btstack_config.h  buttons.c  buttons.h  control.c  control.h  debug.c  debug.h  hidremote.c  hidremote.gatt  hidremote_gatt.h  leds.c  leds.h  main.c
hw/case/: README.md  case-Case_Body.stl  case-Lid_Body.stl  case.FCStd  case.FCStd1  case_v2-Case_Body.3mf  case_v2-Case_Body.stl  case_v2-Lid_Body.3mf  case_v2-Lid_Body.stl  case_v2.20231111-095204.FCBak  case_v2.FCStd
hw/schematic/: fp-info-cache  hid-remote.kicad_pcb  hid-remote.kicad_prl  hid-remote.kicad_pro  hid-remote.kicad_sch
